# simple-icons-website-rs

./: .editorconfig  .gitignore  .prettierrc.json  404.html  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  USAGE.md  deprecations.html  index.html  package-lock.json  package.json  preview.html  rust-toolchain.toml  simple-icons-website-133322c142034b38.js  simple-icons-website-133322c142034b38_bg.wasm  simple-icons-website-1766874647.js  simple-icons-website-1766874647_bg.wasm  simple-icons-website-1767726196.js  simple-icons-website-1767726196_bg.wasm  simple-icons-website-1768747435.js  simple-icons-website-1768747435_bg.wasm  simple-icons-website-1769302254.js  simple-icons-website-1769302254_bg.wasm  simple-icons-website-1771120655.js  simple-icons-website-1771120655_bg.wasm  simple-icons-website-1772936815.js  simple-icons-website-1772936815_bg.wasm  simple-icons-website-1775356650.js  simple-icons-website-1775356650_bg.wasm  simple-icons-website-1777147736.js  simple-icons-website-1777147736_bg.wasm  simple-icons-website-1778994468.js  simple-icons-website-1778994468_bg.wasm  simple-icons-website-1782662722.js  simple-icons-website-1782662722_bg.wasm  simple-icons-website-1784425398.js  simple-icons-website-1784425398_bg.wasm  simple-icons-website-2059b427c3e54836.js  (+144 more)
app/: Cargo.toml  index.html  index.template.html  postcss.config.js  stylesheet.css  tailwind.config.js  tailwind.config.ts
app/i18n/locales/ar/: main.ftl
app/i18n/locales/de-CH/: main.ftl
app/i18n/locales/de-DE/: main.ftl
app/i18n/locales/el-GR/: main.ftl
app/i18n/locales/en-US/: main.ftl
app/i18n/locales/es-ES/: main.ftl
app/i18n/locales/fi-FI/: main.ftl
app/i18n/locales/fr-FR/: main.ftl
app/i18n/locales/hi-IN/: main.ftl
app/i18n/locales/it-IT/: main.ftl
app/i18n/locales/ja-JP/: main.ftl
app/i18n/locales/ko-KR/: main.ftl
app/i18n/locales/nb-NO/: main.ftl
app/i18n/locales/nl-NL/: main.ftl
app/i18n/locales/pl-PL/: main.ftl
app/i18n/locales/pt-PT/: main.ftl
app/i18n/locales/ro-RO/: main.ftl
app/i18n/locales/ru-RU/: main.ftl
app/i18n/src/: lib.rs
app/locales/ko-KR/: main.ftl
app/pages/404/: Cargo.toml
app/pages/base/: Cargo.toml
app/pages/deprecations/: Cargo.toml
app/pages/preview/: Cargo.toml
app/public/assets/: fonts.css
app/src/: app.rs  head.rs  main.rs  pages.rs
leptos-fluent/: Cargo.toml
leptos-fluent-i18n/: Cargo.toml
leptos-fluent-i18n/leptos-fluent-i18n-macros/: Cargo.toml
leptos-fluent-i18n/leptos-fluent-i18n-macros/src/: lib.rs
leptos-fluent-i18n/src/: lib.rs
leptos-fluent/leptos-fluent-macros/: Cargo.toml
leptos-fluent/leptos-fluent-macros/src/: lib.rs
leptos-fluent/src/: lib.rs
libs/leptos-unique-ids/: Cargo.toml  README.md
libs/leptos-unique-ids/src/: lib.rs
(+188 files in other folders)
