[package]
name = "simple-icons-website"
description = "Simple Icons website main index entrypoint"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-icons-website-grid-types.workspace = true
simple-icons-website-grid-constants.workspace = true
simple-icons-website-page-base.workspace = true
leptos.workspace = true
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
