[package]
name = "leptos-fluent-i18n"
description = "Fluent framework for internationalization of Leptos applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fluent-templates.workspace = true
leptos.workspace = true
leptos-fluent-i18n-macros = { path = "./leptos-fluent-i18n-macros" }
unic-langid-impl = "*"
once_cell = "*"
