[package]
name = "leptos-fluent"
description = "Fluent framework for internationalization of Leptos applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos-fluent-macros = { path = "./leptos-fluent-macros" }
fluent-templates = "*"
leptos = "*"
unic-langid-impl = "*"
once_cell = "*"
