[package]
name = "leptos-fluent-i18n-macros"
description = "Macros for leptos-fluent-i18n"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
serde_json = "1.0"
unic-langid-impl = "*"
once_cell = "*"
