[package]
name = "leptos-fluent-macros"
description = "Macros for leptos-fluent"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "*"
quote = "1"
syn = "2"
serde_json = "*"
unic-langid-impl = "*"
once_cell = "*"
web-sys = { version = "*", features = ["HtmlHtmlElement"] }
