[package]
name = "leptos-unique-ids"
description = "Leptos library to ensure unique identifiers in components."
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"

[features]
default = ["into-str", "into-attribute-value"]
into-str = []
into-attribute-value = []

[lints]
workspace = true
